增加集体照上传界面（未完成）

--- a/admin.html
+++ b/admin.html
@@ -26,6 +26,8 @@
     </style>
 </head>
 <body class="layui-layout-body layuimini-all">
+<script src="http://libs.baidu.com/jquery/1.11.1/jquery.min.js"></script>
+<script> var jq1111 = jQuery.noConflict(true); </script>
 <div class="layui-layout layui-layout-admin">
 
     <div class="layui-header header">
@@ -151,7 +153,9 @@
                 window.location = 'page/admin/login.html';
             });
         });
+
     });
 </script>
+
 </body>
 </html>
