--- a/admin.html
+++ b/admin.html
@@ -63,10 +63,10 @@
                     <a href="javascript:;" data-check-screen="full"><i class="fa fa-arrows-alt"></i></a>
                 </li>
                 <li class="layui-nav-item layuimini-setting">
-                    <a href="javascript:;">admin</a>
+                    <a href="javascript:;" id="user-name-text">用户名</a>
                     <dl class="layui-nav-child">
                         <dd>
-                            <a href="javascript:;" layuimini-content-href="page/user-setting.html" data-title="基本资料" data-icon="fa fa-gears">基本资料<span class="layui-badge-dot"></span></a>
+                            <a href="javascript:;" layuimini-content-href="page/user-setting.html" data-title="基本资料" data-icon="fa fa-gears">基本资料</a>
                         </dd>
                         <dd>
                             <a href="javascript:;" layuimini-content-href="page/user-password.html" data-title="修改密码" data-icon="fa fa-gears">修改密码</a>
@@ -127,6 +127,9 @@
             miniTongji = layui.miniTongji;
 
         var options = {
+            headers:{
+                Authorization:"Bearer "+localStorage.getItem('token')
+            },
             iniUrl: "api/admininit.json",    // 初始化接口
             clearUrl: "api/clear.json", // 缓存清理接口
             renderPageVersion: true,    // 初始化页面是否加版本号
@@ -137,6 +140,9 @@
             pageAnim: true,             // 切换菜单动画
         };
         miniAdmin.render(options);
+
+        //用户名初始化
+        jq1111('#user-name-text').text(localStorage.getItem('userName'));
 
         // 百度统计代码，只统计指定域名
         miniTongji.render({
