--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <title>河南大学毕业生云档案</title>
@@ -23,139 +24,144 @@
     <script src="https://cdn.staticfile.org/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
     <style id="layuimini-bg-color">
+
     </style>
 </head>
+
 <body class="layui-layout-body layuimini-all">
-<script src="http://libs.baidu.com/jquery/1.11.1/jquery.min.js"></script>
-<script> var jq1111 = jQuery.noConflict(true); </script>
-<div class="layui-layout layui-layout-admin">
+    <script src="http://libs.baidu.com/jquery/1.11.1/jquery.min.js"></script>
+    <script>
+        var jq1111 = jQuery.noConflict(true);
+    </script>
+    <div class="layui-layout layui-layout-admin">
 
-    <div class="layui-header header">
-        <div class="layui-logo layuimini-logo layuimini-back-home"></div>
+        <div class="layui-header header">
+            <div class="layui-logo layuimini-logo layuimini-back-home"></div>
 
-        <div class="layuimini-header-content">
-            <a>
-                <div class="layuimini-tool"><i title="展开" class="fa fa-outdent" data-side-fold="1"></i></div>
-            </a>
+            <div class="layuimini-header-content">
+                <a>
+                    <div class="layuimini-tool"><i title="展开" class="fa fa-outdent" data-side-fold="1"></i></div>
+                </a>
 
-            <!--电脑端头部菜单-->
-            <ul class="layui-nav layui-layout-left layuimini-header-menu layuimini-menu-header-pc layuimini-pc-show">
-            </ul>
+                <!--电脑端头部菜单-->
+                <ul class="layui-nav layui-layout-left layuimini-header-menu layuimini-menu-header-pc layuimini-pc-show">
+                </ul>
 
-            <!--手机端头部菜单-->
-            <ul class="layui-nav layui-layout-left layuimini-header-menu layuimini-mobile-show">
-                <li class="layui-nav-item">
-                    <a href="javascript:;"><i class="fa fa-list-ul"></i> 选择模块</a>
-                    <dl class="layui-nav-child layuimini-menu-header-mobile">
-                    </dl>
-                </li>
-            </ul>
+                <!--手机端头部菜单-->
+                <ul class="layui-nav layui-layout-left layuimini-header-menu layuimini-mobile-show">
+                    <li class="layui-nav-item">
+                        <a href="javascript:;"><i class="fa fa-list-ul"></i> 选择模块</a>
+                        <dl class="layui-nav-child layuimini-menu-header-mobile">
+                        </dl>
+                    </li>
+                </ul>
 
-            <ul class="layui-nav layui-layout-right">
+                <ul class="layui-nav layui-layout-right">
 
-                <li class="layui-nav-item" lay-unselect>
-                    <a href="javascript:;" data-refresh="刷新"><i class="fa fa-refresh"></i></a>
-                </li>
-                <li class="layui-nav-item" lay-unselect>
-                    <a href="javascript:;" data-clear="清理" class="layuimini-clear"><i class="fa fa-trash-o"></i></a>
-                </li>
-                <li class="layui-nav-item mobile layui-hide-xs" lay-unselect>
-                    <a href="javascript:;" data-check-screen="full"><i class="fa fa-arrows-alt"></i></a>
-                </li>
-                <li class="layui-nav-item layuimini-setting">
-                    <a href="javascript:;">admin</a>
-                    <dl class="layui-nav-child">
-                        <dd>
-                            <a href="javascript:;" layuimini-content-href="page/user-setting.html" data-title="基本资料" data-icon="fa fa-gears">基本资料<span class="layui-badge-dot"></span></a>
-                        </dd>
-                        <dd>
-                            <a href="javascript:;" layuimini-content-href="page/user-password.html" data-title="修改密码" data-icon="fa fa-gears">修改密码</a>
-                        </dd>
-                        <dd>
-                            <hr>
-                        </dd>
-                        <dd>
-                            <a href="javascript:;" class="login-out">退出登录</a>
-                        </dd>
-                    </dl>
-                </li>
-                <li class="layui-nav-item layuimini-select-bgcolor" lay-unselect>
-                    <a href="javascript:;" data-bgcolor="配色方案"><i class="fa fa-ellipsis-v"></i></a>
-                </li>
-            </ul>
-        </div>
-    </div>
-
-    <!--无限极左侧菜单-->
-    <div class="layui-side layui-bg-black layuimini-menu-left">
-    </div>
-
-    <!--初始化加载层-->
-    <div class="layuimini-loader">
-        <div class="layuimini-loader-inner"></div>
-    </div>
-
-    <!--手机端遮罩层-->
-    <div class="layuimini-make"></div>
-
-    <!-- 移动导航 -->
-    <div class="layuimini-site-mobile"><i class="layui-icon"></i></div>
-
-    <div class="layui-body">
-
-        <div class="layui-card layuimini-page-header layui-hide">
-            <div class="layui-breadcrumb layuimini-page-title">
-                <a lay-href="" href="/">主页</a><span lay-separator="">/</span>
-                <a><cite>常规管理</cite></a><span lay-separator="">/</span>
-                <a><cite>系统设置</cite></a>
+                    <li class="layui-nav-item" lay-unselect>
+                        <a href="javascript:;" data-refresh="刷新"><i class="fa fa-refresh"></i></a>
+                    </li>
+                    <li class="layui-nav-item" lay-unselect>
+                        <a href="javascript:;" data-clear="清理" class="layuimini-clear"><i class="fa fa-trash-o"></i></a>
+                    </li>
+                    <li class="layui-nav-item mobile layui-hide-xs" lay-unselect>
+                        <a href="javascript:;" data-check-screen="full"><i class="fa fa-arrows-alt"></i></a>
+                    </li>
+                    <li class="layui-nav-item layuimini-setting">
+                        <a href="javascript:;">admin</a>
+                        <dl class="layui-nav-child">
+                            <dd>
+                                <a href="javascript:;" layuimini-content-href="page/user-setting.html" data-title="基本资料" data-icon="fa fa-gears">基本资料<span class="layui-badge-dot"></span></a>
+                            </dd>
+                            <dd>
+                                <a href="javascript:;" layuimini-content-href="page/user-password.html" data-title="修改密码" data-icon="fa fa-gears">修改密码</a>
+                            </dd>
+                            <dd>
+                                <hr>
+                            </dd>
+                            <dd>
+                                <a href="javascript:;" class="login-out">退出登录</a>
+                            </dd>
+                        </dl>
+                    </li>
+                    <li class="layui-nav-item layuimini-select-bgcolor" lay-unselect>
+                        <a href="javascript:;" data-bgcolor="配色方案"><i class="fa fa-ellipsis-v"></i></a>
+                    </li>
+                </ul>
             </div>
         </div>
 
-        <div class="layuimini-content-page">
+        <!--无限极左侧菜单-->
+        <div class="layui-side layui-bg-black layuimini-menu-left">
+        </div>
+
+        <!--初始化加载层-->
+        <div class="layuimini-loader">
+            <div class="layuimini-loader-inner"></div>
+        </div>
+
+        <!--手机端遮罩层-->
+        <div class="layuimini-make"></div>
+
+        <!-- 移动导航 -->
+        <div class="layuimini-site-mobile"><i class="layui-icon"></i></div>
+
+        <div class="layui-body">
+
+            <div class="layui-card layuimini-page-header layui-hide">
+                <div class="layui-breadcrumb layuimini-page-title">
+                    <a lay-href="" href="/">主页</a><span lay-separator="">/</span>
+                    <a><cite>常规管理</cite></a><span lay-separator="">/</span>
+                    <a><cite>系统设置</cite></a>
+                </div>
+            </div>
+
+            <div class="layuimini-content-page">
+            </div>
+
         </div>
 
     </div>
+    <script src="lib/layui-v2.5.5/layui.js" charset="utf-8"></script>
+    <script src="js/lay-config.js?v=2.0.0" charset="utf-8"></script>
+    <script>
+        layui.use(['jquery', 'layer', 'miniAdmin', 'miniTongji'], function() {
+            var $ = layui.jquery,
+                layer = layui.layer,
+                miniAdmin = layui.miniAdmin,
+                miniTongji = layui.miniTongji;
 
-</div>
-<script src="lib/layui-v2.5.5/layui.js" charset="utf-8"></script>
-<script src="js/lay-config.js?v=2.0.0" charset="utf-8"></script>
-<script>
-    layui.use(['jquery', 'layer', 'miniAdmin', 'miniTongji'], function () {
-        var $ = layui.jquery,
-            layer = layui.layer,
-            miniAdmin = layui.miniAdmin,
-            miniTongji = layui.miniTongji;
+            var options = {
+                iniUrl: "api/guestinit.json", // 初始化接口
+                clearUrl: "api/clear.json", // 缓存清理接口
+                renderPageVersion: true, // 初始化页面是否加版本号
+                bgColorDefault: false, // 主题默认配置
+                multiModule: true, // 是否开启多模块
+                menuChildOpen: false, // 是否默认展开菜单
+                loadingTime: 0, // 初始化加载时间
+                pageAnim: true, // 切换菜单动画
+            };
+            miniAdmin.render(options);
 
-        var options = {
-            iniUrl: "api/guestinit.json",    // 初始化接口
-            clearUrl: "api/clear.json", // 缓存清理接口
-            renderPageVersion: true,    // 初始化页面是否加版本号
-            bgColorDefault: false,      // 主题默认配置
-            multiModule: true,          // 是否开启多模块
-            menuChildOpen: false,       // 是否默认展开菜单
-            loadingTime: 0,             // 初始化加载时间
-            pageAnim: true,             // 切换菜单动画
-        };
-        miniAdmin.render(options);
-
-        // 百度统计代码，只统计指定域名
-        miniTongji.render({
-            specific: true,
-            domains: [
-                '99php.cn',
-                'layuimini.99php.cn',
-                'layuimini-onepage.99php.cn',
-            ],
-        });
-
-        $('.login-out').on("click", function () {
-            layer.msg('退出登录成功', function () {
-                window.location = 'page/admin/login.html';
+            // 百度统计代码，只统计指定域名
+            miniTongji.render({
+                specific: true,
+                domains: [
+                    '99php.cn',
+                    'layuimini.99php.cn',
+                    'layuimini-onepage.99php.cn',
+                ],
             });
-        });
 
-    });
-</script>
+            $('.login-out').on("click", function() {
+                layer.msg('退出登录成功', function() {
+                    window.location = 'page/admin/login.html';
+                });
+            });
+
+        });
+    </script>
 
 </body>
+
 </html>
