相册管理拆分为三个界面（未完成）

--- a/admin.html
+++ b/admin.html
@@ -130,8 +130,8 @@
             headers:{
                 Authorization:"Bearer "+localStorage.getItem('token')
             },
-            iniUrl: "http://localhost:5000/api/Account/Menus",    // 初始化接口
-            //iniUrl: "api/admininit.json",    // 初始化接口
+            //iniUrl: "http://localhost:5000/api/Account/Menus",    // 初始化接口
+            iniUrl: "api/admininit.json",    // 初始化接口
             clearUrl: "api/clear.json", // 缓存清理接口
             renderPageVersion: true,    // 初始化页面是否加版本号
             bgColorDefault: false,      // 主题默认配置
